--- a/index.html
+++ b/index.html
@@ -9,23 +9,75 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <img src="./img/compayz-logo.svg" alt="Logo Compay Z" class="logo">
-        <h1>Contingência e escala em um só lugar.</h1>
-        <h2>Uma plataforma, todas as ferramentas que você precisa.</h2>
-        <div class="button-scroll">
-            <button>Contratar</button>
-            <button>Explorar a Compay Z</button>
-        </div>
-        <div class="introduction">
-                <h3>
-                    O que é a Compay Z?
-                </h3>
-                <p>
-                    Ideal para quem atua com PLR, encapsulados e produtos de renda extra. Tenha domínios seguros, páginas rápidas e sem bloqueios. Integre seus produtos, encante seus clientes com uma linda área de membros, recupere vendas aquecidas pela sua oferta e automatize seu funil de vendas para ganhar escala.
-                </p>
-        </div>
-        <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/cd39548a-763c-472c-8980-8246cf6c23e3/players/637fe71a397091000bad6924/embed.html" id="ifr_637fe71a397091000bad6924" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
-    </header>
-</body>
+        <nav>
+            <img src="./img/compayz-logo.svg" alt="" id="logo">
+        </nav>
+        <header>
+            <h1>CRM para empreendedores digitais.</h1>
+            <h3>Exclusivo para o mercado de Lançamentos, Perpétuos, Serviços High Ticket e Eventos.</h3>
+            <button>Solicitar demonstração</button>
+            <img src="./img/62f68368cea3732f1c08f8ad_crm-plataforma-01-p-1600.webp" alt="" id="header-svg">
+        </header>
+        <section class="users-section">
+            <h5>Quem utiliza a Compay-Z</h5>
+            <div class="users">
+                <div class="users-slider">
+                    <img src="./img/arrow-left.svg" alt="" id="left-arrow" onclick="scrollSectionLeft()">
+                </div>
+                <div class="users-wrapper">
+                    <div class="users-column">
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingles</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                    </div>
+                    <div class="users-column">
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Job</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="users-slider">
+                    <img src="./img/arrow-right.svg" alt="" id="right-arrow" onclick="scrollSectionRight()">
+                </div>
+            </div>
+        </section>
+
+    <script src="./script.js"></script>    
+    </body>
 </html>
