--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <h5>Quem utiliza a Compay-Z</h5>
             <div class="users">
                 <div class="users-slider">
-                    <img src="./img/arrow-left.svg" alt="" id="left-arrow" onclick="scrollSectionLeft()">
+                    <img class="previous-btn" src="./img/arrow-left.svg" alt="" id="left-arrow">
                 </div>
                 <div class="users-wrapper">
-                    <div class="users-column">
+                    <div class="users-column active" id="column-1">
                         <div class="user">
                             <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
                             <h6 class="user-name">Tia do Inglês</h6>
@@ -33,7 +33,7 @@
                         </div>
                         <div class="user">
                             <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-name">Ti0 do Isasalês</h6>
                             <h6 class="user-social">@tiadoingle</h6>
                         </div>
                         <div class="user">
@@ -47,7 +47,7 @@
                             <h6 class="user-social">@tiadoingle</h6>
                         </div>
                     </div>
-                    <div class="users-column">
+                    <div class="users-column" id="column-2">
                         <div class="user">
                             <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
                             <h6 class="user-name">Job</h6>
@@ -69,15 +69,81 @@
                             <h6 class="user-social">@tiadoingle</h6>
                         </div>
                     </div>
+                    <div class="users-column" id="column-3">
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingles</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                        <div class="user">
+                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
+                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-social">@tiadoingle</h6>
+                        </div>
+                    </div>
                     
                 </div>
 
                 <div class="users-slider">
-                    <img src="./img/arrow-right.svg" alt="" id="right-arrow" onclick="scrollSectionRight()">
+                    <img src="./img/arrow-right.svg" alt="" id="right-arrow" class="next-btn">
+                </div>
+            </div>
+        </section>
+        <section class="step">
+            <h2>
+                Veja passo a passo de como podemos ajudar o seu negócio
+            </h2>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/cd39548a-763c-472c-8980-8246cf6c23e3/players/637fe71a397091000bad6924/embed.html" id="ifr_637fe71a397091000bad6924" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
+        </section>
+
+        <section class="why-use">
+            <h2>
+                Porque infoprodutores utilizam a Clint
+            </h2>
+            <div class="reasons">
+                <div class="reason">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <div class="reason-text">
+                        <h3>Aumento de conversão</h3>
+                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                    </div>
+                </div>
+                <div class="reason">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <div class="reason-text">
+                        <h3>Aumento de conversão</h3>
+                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                    </div>
+                </div>
+                <div class="reason">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <div class="reason-text">
+                        <h3>Aumento de conversão</h3>
+                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                    </div>
+                </div>
+                <div class="reason">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <div class="reason-text">
+                        <h3>Aumento de conversão</h3>
+                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-    <script src="./script.js"></script>    
+        <div class="space" style="width: 100vw; height: 100vh;"></div>
+
+    <script src="./script.js"></script>
     </body>
 </html>
