--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
         <nav>
-            <img src="./img/compayz-logo.svg" alt="" id="logo">
+            <img src="./img/compayz-logo.svg" alt="" class="logo">
         </nav>
         <header>
-            <h1>CRM para empreendedores digitais.</h1>
-            <h3>Exclusivo para o mercado de Lançamentos, Perpétuos, Serviços High Ticket e Eventos.</h3>
-            <button>Solicitar demonstração</button>
+            <h1>Contingência e escala em um só lugar</h1>
+            <h3>Proteja seu site de espiões, controle o tráfego de seus domínios e automatize seu funil de vendas.</h3>
+            <button class="demo-button">Conhecer planos</button>
             <img src="./img/62f68368cea3732f1c08f8ad_crm-plataforma-01-p-1600.webp" alt="" id="header-svg">
         </header>
         <section class="users-section">
@@ -28,67 +28,22 @@
                     <div class="users-column active" id="column-1">
                         <div class="user">
                             <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingles</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Ti0 do Isasalês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
+                            <h6 class="user-name">Gabriel Floriani</h6>
+                            <h6 class="user-social">@gabrielflorianii</h6>
                         </div>
                     </div>
                     <div class="users-column" id="column-2">
                         <div class="user">
                             <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Job</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
+                            <h6 class="user-name">Thayni Ruana</h6>
                             <h6 class="user-social">@tiadoingle</h6>
                         </div>
                     </div>
                     <div class="users-column" id="column-3">
                         <div class="user">
                             <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingles</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
-                        </div>
-                        <div class="user">
-                            <img class="profile-img" src="./img/6390b3ec3e8c0e6a1fa07abf_tiadoingles.png" alt="">
-                            <h6 class="user-name">Tia do Inglês</h6>
-                            <h6 class="user-social">@tiadoingle</h6>
+                            <h6 class="user-name">Sou Recoads</h6>
+                            <h6 class="user-social">@sourecoads</h6>
                         </div>
                     </div>
                     
@@ -108,41 +63,192 @@
 
         <section class="why-use">
             <h2>
-                Porque infoprodutores utilizam a Clint
+                Porque infoprodutores utilizam a Compay Z
             </h2>
             <div class="reasons">
                 <div class="reason">
                     <img src="./img/telegram-svg.svg" alt="">
                     <div class="reason-text">
-                        <h3>Aumento de conversão</h3>
-                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                        <h3>Camuflagem avançada</h3>
+                        <p>Proteja suas páginas, domínios e produtos. Filtragem total entre leads reais, bots e plagiadores.
+                            Tenha um carregamento de páginas 70% mais rápido.</p>
                     </div>
                 </div>
                 <div class="reason">
                     <img src="./img/telegram-svg.svg" alt="">
                     <div class="reason-text">
-                        <h3>Aumento de conversão</h3>
-                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                        <h3>Convert Z</h3>
+                        <p>Com o Convert Z integrado aos seus produtos, sua equipe de recuperação atinge o cliente ainda aquecido pela sua oferta, com todas informações disponíveis em um incrível CRM de vendas.</p>
                     </div>
                 </div>
                 <div class="reason">
                     <img src="./img/telegram-svg.svg" alt="">
                     <div class="reason-text">
-                        <h3>Aumento de conversão</h3>
-                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                        <h3>Member Z</h3>
+                        <p>Retenha mais clientes com a melhor área de membros do mercado. Ofereça novas ofertas em banners disruptivos e pontuais.</p>
                     </div>
                 </div>
                 <div class="reason">
                     <img src="./img/telegram-svg.svg" alt="">
                     <div class="reason-text">
-                        <h3>Aumento de conversão</h3>
-                        <p>Expanda seus canais de contatos e alcance sua audiência em poucos minutos enviando ligação gravada e mensagem de SMS.</p>
+                        <h3>Funnel Z</h3>
+                        <p>Conecte todas suas plataformas de vendas a uma central avançada do mercado</p>
                     </div>
+                </div>
+                <div class="reason">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <div class="reason-text">
+                        <h3>Host Z</h3>
+                        <p>Compre, gerencia e configure domínios de forma otimizada.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <button class="demo-button">Conhecer planos</button>
+        </section>
+
+        <section class="flow">
+            <img src="./img/flow-svg.svg" alt="" class="flow-svg">
+            <div class="flow-explain">
+                <h2>Conecte sua plataforma de vendas e gerencie todos seus leads na Compay Z</h2>
+                <p>Com a Compay Z você recebe seus leads vindos da sua plataforma de checkout favorita. Em um único lugar você vai gerenciar suas oportunidades e trabalhar para gerar novas vendas ou engajar seus clientes no pós-vendas.</p>
+                <h3>Receba oportunidades de:</h3>
+                <div class="oportunities">
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Abandono de carrinho</p> 
+                    </div>
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Cartão recusado</p> 
+                    </div>
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Boleto e Pix em aberto</p> 
+                    </div>
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Compras expiradas</p> 
+                    </div>
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Compras aprovadas</p> 
+                    </div>
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Gestão de assinaturas</p> 
+                    </div>
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Prospecção ativa</p> 
+                    </div>
+                    <div class="oportunity">
+                        <img src="./img/telegram-svg.svg" alt="">
+                        <p>Pedidos de reembolso</p> 
+                    </div>
+                </div>
+
+                <button class="demo-button">Conhecer planos</button>
+        </section>
+
+        <section class="compay-home">
+            <img src="./img/compayz-logo.svg" alt="" class="logo">
+            <h2>Ferramenta de vendas e relacionamento com clientes completa para infoprodutores aumentarem conversões.</h2>
+            <div class="page-buttons">
+                <div class="page-button">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <h3>Ligações gravadas</h3>
+                </div>
+                <div class="page-button">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <h3>Ligações gravadas</h3>
+                </div>
+                <div class="page-button">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <h3>Ligações gravadas</h3>
+                </div>
+                <div class="page-button">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <h3>Ligações gravadas</h3>
+                </div>
+            </div>
+            <div class="page-contents">
+                <div class="page">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <h2>Tráfego de acordo com suas regras</h2>
+                    <p>Envie em massa Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi magnam et beatae similique tenetur molestias ut ab temporibus fugit, sit recusandae doloremque natus excepturi, fuga illo. Inventore id enim ratione!</p>
+                    <ul>
+                        <li>
+                            Camuflagem de domínios sem redirecionamento
+                        </li>
+                        <li>
+                            Bloqueio de bots e softwares espiões;
+                        </li>
+                        <li>
+                            Rastreamento por pixel e tags;
+                        </li>
+                        <li>
+                            Criptografia de página e texto;
+                        </li>
+                        <li>
+                            Gerenciamento e Roteamento de links para lançamentos;
+                        </li>
+                        <li>
+                            Configuração personalizada de botão de WhatsApp e Popups;
+                        </li>
+                        <li>
+                            Páginas prontas e super rápidas;
+                        </li>
+                        <li>
+                            Encurtador de links com rastreamento.
+                        </li>
+                    </ul>
+                    <a href="#">Conheça o mdo campanhas</a>
+                    <img src="./img/page-img1.webp" alt="">
+                </div>
+
+                <div class="page">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <h2>Vendas</h2>
+                    <p>Muitos produtores NÃO atuam na recuperação de abandono de carrinho, pix cancelado, cartão recusado e boletos vencidos e por isso podem deixar de ganhar um apartamento por ano.
+                    Com o Convert Z integrado aos seus produtos sua equipe de recuperação atua no cliente ainda aquecido pela sua oferta, com todas informações disponíveis em um incrível CRM de vendas.
+                    Integramos com as maiores e MELHORES PLATAFORMA DE VENDAS do mercado e criamos funis de recuperação de vendas para você.</p>
+                    <a href="#">Conheça o mdo campanhas</a>
+                    <img src="./img/page-img1.webp" alt="">
+                </div>
+
+                <div class="page">
+                    <img src="./img/telegram-svg.svg" alt="">
+                    <h2>Escala</h2>
+                    <h3>A Member Z é sua área de vendas para encantar seus clientes</h3>
+                    <ul>
+                        <li>
+                            Simplesmente encantadora;
+                        </li>
+                        <li>
+                            Feita para vender em qualquer plataformas de vendas;
+                        </li>
+                        <li>
+                            Automatizada para facilitar sua gestão de grupos de telegram;
+                        </li>
+                        <li>
+                            Relatórios de uso e suporte interno para seus membros;
+                        </li>
+                        <li>
+                            Páginas internas de vendas;
+                        </li>
+                        <li>
+                            Suporte personalizado para ajudar produtor e sua equipe;
+                        </li>
+                    </ul>
+                    <a href="#">Conheça o mdo campanhas</a>
+                    <img src="./img/page-img1.webp" alt="">
                 </div>
             </div>
         </section>
 
-        <div class="space" style="width: 100vw; height: 100vh;"></div>
+        <div class="space" style="width: 100vw; height: 50vh;"></div>
 
     <script src="./script.js"></script>
     </body>
