--- a/index.html
+++ b/index.html
@@ -156,94 +156,106 @@
             <img src="./img/compayz-logo.svg" alt="" class="logo">
             <h2>Ferramenta de vendas e relacionamento com clientes completa para infoprodutores aumentarem conversões.</h2>
             <div class="page-buttons">
-                <div class="page-button">
+                <div class="page-button selected" id="page-button1">
                     <img src="./img/telegram-svg.svg" alt="">
-                    <h3>Ligações gravadas</h3>
+                    <h3>Tráfego</h3>
                 </div>
-                <div class="page-button">
+                <div class="page-button" id="page-button2">
                     <img src="./img/telegram-svg.svg" alt="">
-                    <h3>Ligações gravadas</h3>
+                    <h3>Vendas</h3>
                 </div>
-                <div class="page-button">
+                <div class="page-button" id="page-button3">
                     <img src="./img/telegram-svg.svg" alt="">
-                    <h3>Ligações gravadas</h3>
-                </div>
-                <div class="page-button">
-                    <img src="./img/telegram-svg.svg" alt="">
-                    <h3>Ligações gravadas</h3>
+                    <h3>Escala</h3>
                 </div>
             </div>
-            <div class="page-contents">
-                <div class="page">
-                    <img src="./img/telegram-svg.svg" alt="">
+            <div class="page-content">
+                <div class="page selected" id="page1">
+                    <div class="page-icon">
+                        <img src="./img/telegram-svg.svg" alt="">
+                    </div>
                     <h2>Tráfego de acordo com suas regras</h2>
-                    <p>Envie em massa Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi magnam et beatae similique tenetur molestias ut ab temporibus fugit, sit recusandae doloremque natus excepturi, fuga illo. Inventore id enim ratione!</p>
                     <ul>
                         <li>
-                            Camuflagem de domínios sem redirecionamento
+                            <img src="./img/check-svg.svg" alt="">
+                            <p>Camuflagem de domínios sem redirecionamento;</p>
                         </li>
                         <li>
+                            <img src="./img/check-svg.svg" alt="">
                             Bloqueio de bots e softwares espiões;
                         </li>
                         <li>
+                            <img src="./img/check-svg.svg" alt="">
                             Rastreamento por pixel e tags;
                         </li>
                         <li>
+                            <img src="./img/check-svg.svg" alt="">
                             Criptografia de página e texto;
                         </li>
                         <li>
+                            <img src="./img/check-svg.svg" alt="">
                             Gerenciamento e Roteamento de links para lançamentos;
                         </li>
                         <li>
+                            <img src="./img/check-svg.svg" alt="">
                             Configuração personalizada de botão de WhatsApp e Popups;
                         </li>
                         <li>
+                            <img src="./img/check-svg.svg" alt="">
                             Páginas prontas e super rápidas;
                         </li>
                         <li>
+                            <img src="./img/check-svg.svg" alt="">
                             Encurtador de links com rastreamento.
                         </li>
                     </ul>
-                    <a href="#">Conheça o mdo campanhas</a>
-                    <img src="./img/page-img1.webp" alt="">
+                    <img src="./img/page-img1.webp" alt="" class="page-img">
                 </div>
 
-                <div class="page">
-                    <img src="./img/telegram-svg.svg" alt="">
+                <div class="page" id="page2">
+                    <div class="page-icon">
+                        <img src="./img/telegram-svg.svg" alt="">
+                    </div>
                     <h2>Vendas</h2>
                     <p>Muitos produtores NÃO atuam na recuperação de abandono de carrinho, pix cancelado, cartão recusado e boletos vencidos e por isso podem deixar de ganhar um apartamento por ano.
                     Com o Convert Z integrado aos seus produtos sua equipe de recuperação atua no cliente ainda aquecido pela sua oferta, com todas informações disponíveis em um incrível CRM de vendas.
                     Integramos com as maiores e MELHORES PLATAFORMA DE VENDAS do mercado e criamos funis de recuperação de vendas para você.</p>
-                    <a href="#">Conheça o mdo campanhas</a>
-                    <img src="./img/page-img1.webp" alt="">
+                    <img src="./img/page-img1.webp" alt="" class="page-img">
                 </div>
 
-                <div class="page">
-                    <img src="./img/telegram-svg.svg" alt="">
+                <div class="page" id="page3">
+                    <div class="page-icon">
+                        <img src="./img/telegram-svg.svg" alt="">
+                    </div>
                     <h2>Escala</h2>
                     <h3>A Member Z é sua área de vendas para encantar seus clientes</h3>
                     <ul>
                         <li>
-                            Simplesmente encantadora;
+                            <img src="./img/check-svg.svg" alt="">
+                            <p>Simplesmente encantadora;</p>
                         </li>
                         <li>
-                            Feita para vender em qualquer plataformas de vendas;
+                            <img src="./img/check-svg.svg" alt="">
+                            <p>Feita para vender em qualquer plataformas de vendas;</p>
                         </li>
                         <li>
-                            Automatizada para facilitar sua gestão de grupos de telegram;
+                            <img src="./img/check-svg.svg" alt="">
+                            <p>Automatizada para facilitar sua gestão de grupos de telegram;</p>
                         </li>
                         <li>
-                            Relatórios de uso e suporte interno para seus membros;
+                            <img src="./img/check-svg.svg" alt="">
+                            <p>Relatórios de uso e suporte interno para seus membros;</p>
                         </li>
                         <li>
-                            Páginas internas de vendas;
+                            <img src="./img/check-svg.svg" alt="">
+                            <p>Páginas internas de vendas;</p>
                         </li>
                         <li>
-                            Suporte personalizado para ajudar produtor e sua equipe;
+                            <img src="./img/check-svg.svg" alt="">
+                            <p>Suporte personalizado para ajudar produtor e sua equipe;</p>
                         </li>
                     </ul>
-                    <a href="#">Conheça o mdo campanhas</a>
-                    <img src="./img/page-img1.webp" alt="">
+                    <img src="./img/page-img1.webp" alt="" class="page-img">
                 </div>
             </div>
         </section>
