--- a/index.html
+++ b/index.html
@@ -258,9 +258,27 @@
                     <img src="./img/page-img1.webp" alt="" class="page-img">
                 </div>
             </div>
+            <button class="demo-button">Conhecer planos</button>
         </section>
 
-        <div class="space" style="width: 100vw; height: 50vh;"></div>
+        <section class="results">
+            <h2>Aumento de produtividade, assertividade e centralização de dados</h2>
+            <div class="result-buttons">
+                <button id="result-button1" class="selected">Com Compay Z</button>
+                <button id="result-button2">Sem Compay Z</button>
+            </div>
+            <div class="result-imgs">
+                <img src="./img/result-img1.png" alt="" id="result-img1" class="selected">
+                <img src="./img/result-img2.png" alt="" id="result-img2">
+            </div>
+
+            <a href="#" id="back-top">
+                <span>Voltar ao topo</span>
+                <img src="./img/arrow-svg.svg" alt="">
+            </a>
+        </section>
+
+        
 
     <script src="./script.js"></script>
     </body>
