--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
             <img src="./img/compayz-logo.svg" alt="" class="logo">
         </nav>
         <header>
-            <h1>Contingência e escala em um só lugar</h1>
-            <h3>Proteja seu site de espiões, controle o tráfego de seus domínios e automatize seu funil de vendas.</h3>
-            <button class="demo-button">Conhecer planos</button>
-            <img src="./img/62f68368cea3732f1c08f8ad_crm-plataforma-01-p-1600.webp" alt="" id="header-svg">
+            <div class="header-h">
+                <h1>Contingência e escala em um só lugar</h1>
+                <h3>Proteja seu site de espiões, controle o tráfego de seus domínios e automatize seu funil de vendas.</h3>
+                <button class="demo-button">Conhecer planos</button>
+            </div>
+            <img src="./img/Mockup-003.png" alt="" id="header-svg">
         </header>
         <section class="users-section">
             <h5>Quem utiliza a Compay-Z</h5>
@@ -58,7 +60,7 @@
             <h2>
                 Veja passo a passo de como podemos ajudar o seu negócio
             </h2>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/cd39548a-763c-472c-8980-8246cf6c23e3/players/637fe71a397091000bad6924/embed.html" id="ifr_637fe71a397091000bad6924" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
+            <!-- <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/cd39548a-763c-472c-8980-8246cf6c23e3/players/637fe71a397091000bad6924/embed.html" id="ifr_637fe71a397091000bad6924" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div> -->
         </section>
 
         <section class="why-use">
@@ -67,7 +69,7 @@
             </h2>
             <div class="reasons">
                 <div class="reason">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Camuflagem.png" alt="">
                     <div class="reason-text">
                         <h3>Camuflagem avançada</h3>
                         <p>Proteja suas páginas, domínios e produtos. Filtragem total entre leads reais, bots e plagiadores.
@@ -75,28 +77,28 @@
                     </div>
                 </div>
                 <div class="reason">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Convert-Z.png" alt="">
                     <div class="reason-text">
                         <h3>Convert Z</h3>
                         <p>Com o Convert Z integrado aos seus produtos, sua equipe de recuperação atinge o cliente ainda aquecido pela sua oferta, com todas informações disponíveis em um incrível CRM de vendas.</p>
                     </div>
                 </div>
                 <div class="reason">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Member-Z.png" alt="">
                     <div class="reason-text">
                         <h3>Member Z</h3>
                         <p>Retenha mais clientes com a melhor área de membros do mercado. Ofereça novas ofertas em banners disruptivos e pontuais.</p>
                     </div>
                 </div>
                 <div class="reason">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Funnel-Z.png" alt="">
                     <div class="reason-text">
                         <h3>Funnel Z</h3>
                         <p>Conecte todas suas plataformas de vendas a uma central avançada do mercado</p>
                     </div>
                 </div>
                 <div class="reason">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Host-Z.png" alt="">
                     <div class="reason-text">
                         <h3>Host Z</h3>
                         <p>Compre, gerencia e configure domínios de forma otimizada.
@@ -109,42 +111,42 @@
         </section>
 
         <section class="flow">
-            <img src="./img/flow-svg.svg" alt="" class="flow-svg">
+            <img src="./img/INTEGRAÇOES.png" alt="" class="flow-svg">
             <div class="flow-explain">
                 <h2>Conecte sua plataforma de vendas e gerencie todos seus leads na Compay Z</h2>
                 <p>Com a Compay Z você recebe seus leads vindos da sua plataforma de checkout favorita. Em um único lugar você vai gerenciar suas oportunidades e trabalhar para gerar novas vendas ou engajar seus clientes no pós-vendas.</p>
                 <h3>Receba oportunidades de:</h3>
                 <div class="oportunities">
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/abandono-carrinho-svg.svg" alt="">
                         <p>Abandono de carrinho</p> 
                     </div>
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/cartao.svg" alt="">
                         <p>Cartão recusado</p> 
                     </div>
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/boleto-svg.svg" alt="">
                         <p>Boleto e Pix em aberto</p> 
                     </div>
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/compras-expiradas.svg" alt="">
                         <p>Compras expiradas</p> 
                     </div>
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/compras-aprovadas-svg.svg" alt="">
                         <p>Compras aprovadas</p> 
                     </div>
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/gestao-assinaturas.svg" alt="">
                         <p>Gestão de assinaturas</p> 
                     </div>
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/prospeccao-ativa.svg" alt="">
                         <p>Prospecção ativa</p> 
                     </div>
                     <div class="oportunity">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/pedidos-de-reembolso.svg" alt="">
                         <p>Pedidos de reembolso</p> 
                     </div>
                 </div>
@@ -157,22 +159,22 @@
             <h2>Ferramenta de vendas e relacionamento com clientes completa para infoprodutores aumentarem conversões.</h2>
             <div class="page-buttons">
                 <div class="page-button selected" id="page-button1">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Camuflagem.png" alt="">
                     <h3>Tráfego</h3>
                 </div>
                 <div class="page-button" id="page-button2">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Funnel-Z.png" alt="">
                     <h3>Vendas</h3>
                 </div>
                 <div class="page-button" id="page-button3">
-                    <img src="./img/telegram-svg.svg" alt="">
+                    <img src="./img/Icon-Member-Z-001.png" alt="">
                     <h3>Escala</h3>
                 </div>
             </div>
             <div class="page-content">
                 <div class="page selected" id="page1">
                     <div class="page-icon">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/Camuflagem.png" alt="">
                     </div>
                     <h2>Tráfego de acordo com suas regras</h2>
                     <ul>
@@ -214,7 +216,7 @@
 
                 <div class="page" id="page2">
                     <div class="page-icon">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/Funnel-Z.png" alt="">
                     </div>
                     <h2>Vendas</h2>
                     <p>Muitos produtores NÃO atuam na recuperação de abandono de carrinho, pix cancelado, cartão recusado e boletos vencidos e por isso podem deixar de ganhar um apartamento por ano.
@@ -225,7 +227,7 @@
 
                 <div class="page" id="page3">
                     <div class="page-icon">
-                        <img src="./img/telegram-svg.svg" alt="">
+                        <img src="./img/Icon-Member-Z-001.png" alt="">
                     </div>
                     <h2>Escala</h2>
                     <h3>A Member Z é sua área de vendas para encantar seus clientes</h3>
